[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pinenut"
version = "1.2.0"
description = "A compact define-by-run deep learning framework written in Python"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Neil Jiang"},
]
dependencies = [
    "numpy>=1.20",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
examples = ["matplotlib"]
memory = ["pympler"]
dev = ["build", "matplotlib", "pympler"]
gpu-cu12 = ["cupy-cuda12x[ctk]"]
gpu-cu13 = ["cupy-cuda13x[ctk]"]

[project.urls]
Homepage = "https://github.com/pinenuthome/pinenut"
Repository = "https://github.com/pinenuthome/pinenut"

[tool.setuptools]
packages = [
    "pinenut",
    "pinenut.core",
    "pinenut.datasets",
    "pinenut.nn",
    "pinenut.optim",
    "pinenut.utils",
]
package-dir = {pinenut = "."}
